@@ -1,13 +1,13 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-EBUILD orage-9999.ebuild 911 RMD160 7acc6b18abb999d7b00b1943057652322a34e1d3 SHA1 f7729aaa3c42b356a8b44eac67a8b7c58d113f32 SHA256 c16de46b7204fe811908ad046c51546aa949091cd5a62d7964129602fa52d3b6
-MISC ChangeLog 869 RMD160 e7ba848499d1b2873c960aff95325418cde6ceda SHA1 aaf02c551cf9fb9a9c0db9d8d6d6daa1fb44370c SHA256 1a1351ae2ebe026efc92950aee6e008d4ca1403c9a88e11ab2074866fc33e39d
+EBUILD orage-9999.ebuild 994 RMD160 5852305fc3c210d15885cb01063095d3c5e85dbf SHA1 39a174034dac2e290d83c17e9b20a8d4c352c8f4 SHA256 80795e23f955ad240043c37c1713d93e08e58afe78b031e870e26780d6f47dbd
+MISC ChangeLog 958 RMD160 ebe7acf84456bdf5c97030fd3e43831c782ce023 SHA1 d6c0bb76e25f7f8e0cb67b4ac504c8cd06e558f3 SHA256 f0b9247b0de3ac511be400a9becf1910ac724b5ed7a4f984811d3f0b3ce14c57
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkkWJFIACgkQKhnDs22gwa8gmACgmWEIWp1i98Gfa26BXZVQQUBD
-D+0An1gfrYcF/yQqQyDVuWjNVs009oIt
-=xUQB
+iEYEARECAAYFAkkXeTIACgkQKhnDs22gwa+Q4QCgyswSvQ6fx0wEo4QJJ1/0D9yV
+KVgAoOhEnIQ7OngDxyShcZrwji1yeyDm
+=sz/i
 -----END PGP SIGNATURE-----
