@@ -2,6 +2,9 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  09 Nov 2008; Christoph Mende <angelos@gentoo.org> orage-9999.ebuild:
+  Add USE=berkdb
+
   04 Aug 2008; Christoph Mende <angelos@gentoo.org> orage-9999.ebuild:
   Removed unneeded libxfce4mcs dependency
 
